[package]
name = "dyscards"
version = "0.1.0"
edition = "2024"

[dependencies.axum]
version = "0.8.8"
default-features = false
features = ["http1", "json", "query", "tokio", "macros"]

[dependencies.piet]
version = "0.8.0"
default-features = false
features = ["webp"]

[dependencies.dotenvy]
git = "https://github.com/allan2/dotenvy"
features = ["macros"]

[dependencies.tokio]
version = "1.50.0"
features = ["full"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
piet-common = "0.8.0"
png = "0.18.1"
matroska-demuxer = "0.7.0"
bytes = "1.11.1"
reqwest = { version = "0.13.2", features = ["json"] }
tokio-util = "0.7.18"
