[package]
name = "dyscards"
version = "0.1.0"
edition = "2024"

[dependencies.axum]
version = "0.8.8"
default-features = false
features = ["http1", "json", "query", "tokio"]

[dependencies.piet-common]
version = "0.8.0"
default-features = false
features = ["webp"]

[dependencies.tokio]
version = "1.50.0"
default-features = false
features = ["rt", "rt-multi-thread", "macros"]

[dependencies.serde]
version = "1.0.228"
default-features = false
features = ["derive"]

[dependencies.reqwest]
version = "0.13.2"
default-features = false
features = ["rustls", "json"]

[dependencies]
png = "0.18.1"
bytes = "1.11.1"
